--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>Guitar Shop</h2>
         <nav>
             <a href="index.html">Início</a>
-            <a href="#">Instrumentos</a>
+            <a href="filiais.html">Filiais</a>
             <a href="#">Contato</a>
         </nav>
     </header>
