--- a/contato.html
+++ b/contato.html
@@ -12,7 +12,7 @@
 
     <!-- Cabeçalho -->
     <header>
-        <h2>Locadora IFPR</h2>
+        <h2>Guitar Shop</h2>
         <nav>
             <a href="index.html">Início</a>
             <a href="filiais.html">Filiais</a>
@@ -24,14 +24,14 @@
     <main>
         <h1>Entre em Contato</h1>
         <form class="contato-form">
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
+            <label for="nome">Whatsapp</label>
+            <input type="text" id="nome" name="nome" placeholder="Nos adicione!" required>
 
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
+            <label for="email">E-mail</label>
+            <input type="email" id="email" name="email" placeholder="Entre em contato." required>
 
-            <label for="mensagem">Mensagem:</label>
-            <textarea id="mensagem" name="mensagem" rows="5" placeholder="Escreva sua mensagem"></textarea>
+            <label for="mensagem">Sugestões</label>
+            <textarea id="mensagem" name="mensagem" rows="5" placeholder="Escreva sua sugestão"></textarea>
 
             <button type="submit">Enviar</button>
         </form>
@@ -39,7 +39,7 @@
 
     <!-- Rodapé -->
     <footer>
-        <p>&copy; 2025 Locadora IFPR - Todos os direitos reservados</p>
+        <p>&copy; 2025 Guitar Shop - Todos os direitos reservados</p>
     </footer>
 
 </body>
