--- a/filiais.html
+++ b/filiais.html
@@ -15,7 +15,7 @@
         <h2>Guitar Shop</h2>
         <nav>
             <a href="index.html">Início</a>
-            <a href="#">Filiais</a>
+            <a href="filiais.html">Filiais</a>
             <a href="contato.html">Contato</a>
         </nav>
     </header>
