--- a/contato.html
+++ b/contato.html
@@ -25,10 +25,10 @@
         <h1>Entre em Contato</h1>
         <form class="contato-form">
             <label for="nome">Whatsapp</label>
-            <input type="text" id="nome" name="nome" placeholder="Nos adicione!" required>
+            <input type="text" id="nome" name="nome" placeholder="Digite seu Whatsapp." required>
 
             <label for="email">E-mail</label>
-            <input type="email" id="email" name="email" placeholder="Entre em contato." required>
+            <input type="email" id="email" name="email" placeholder="Digite seu email." required>
 
             <label for="mensagem">Sugestões</label>
             <textarea id="mensagem" name="mensagem" rows="5" placeholder="Escreva sua sugestão"></textarea>
