--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!-- Rodapé -->
     <footer>
-        <p>&copy; 2025 Mayara - Todos os direitos reservados</p>
+        <p>&copy; 2025 Guitar Shop - Todos os direitos reservados</p>
     </footer>
 
 </body>
