--- a/contato.html
+++ b/contato.html
@@ -22,15 +22,15 @@
 
     <!-- Conteúdo principal -->
     <main>
-        <h1>Entre em Contato</h1>
+        <h1>Dúvidas e Sugestões? Entre em Contato</h1>
         <form class="contato-form">
             <label for="nome">Whatsapp</label>
             <input type="text" id="nome" name="nome" placeholder="Digite seu Whatsapp." required>
 
             <label for="email">E-mail</label>
             <input type="email" id="email" name="email" placeholder="Digite seu email." required>
-
-            <label for="mensagem">Sugestões</label>
+            
+            <label for="mensagem">Sugestões e Dúvidas</label>
             <textarea id="mensagem" name="mensagem" rows="5" placeholder="Escreva sua sugestão"></textarea>
 
             <button type="submit">Enviar</button>
