--- a/contato.html
+++ b/contato.html
@@ -23,7 +23,7 @@
     <!-- Conteúdo principal -->
     <main>
         <h1>Dúvidas e Sugestões? Entre em Contato</h1>
-        <form class="contato-form">
+        <form class="contato-form" action="action_contato.php" method="POST">
             <label for="nome">Whatsapp</label>
             <input type="text" id="nome" name="nome" placeholder="Digite seu Whatsapp." required>
 
