--- a/contato.html
+++ b/contato.html
@@ -24,8 +24,8 @@
     <main>
         <h1>Dúvidas e Sugestões? Entre em Contato</h1>
         <form class="contato-form" action="action_contato.php" method="POST">
-            <label for="nome">Whatsapp</label>
-            <input type="text" id="nome" name="nome" placeholder="Digite seu Whatsapp." required>
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" name="nome" placeholder="Digite seu nome." required>
 
             <label for="email">E-mail</label>
             <input type="email" id="email" name="email" placeholder="Digite seu email." required>
