--- a/contato.html
+++ b/contato.html
@@ -33,7 +33,7 @@
             <label for="mensagem">Sugestões e Dúvidas</label>
             <textarea id="mensagem" name="mensagem" rows="5" placeholder="Escreva sua sugestão"></textarea>
             
-            <label>Filial (radio):</label>
+            <label>Filial:</label>
     <input type="radio" id="pg" name="Filial" value="Ponta Grossa">
     <label for="pg">Ponta Grossa</label>
     <input type="radio" id="ctb" name="Filial" value="Curitiba">
