--- a/contato.html
+++ b/contato.html
@@ -23,7 +23,7 @@
     <!-- Conteúdo principal -->
     <main>
         <h1>Dúvidas e Sugestões? Entre em Contato</h1>
-        <form class="contato-form" action="action_contato.php" method="POST">
+        <form class="contato-form" action="https://script.google.com/macros/s/AKfycbxA8iGDlI9wJLv0ZaEyiWel5urcGhQLyi8VpiTMOlyoAUDO3CMTIN9qWoXRCjoEHCQrRw/exec" method="POST">
             <label for="nome">Nome</label>
             <input type="text" id="nome" name="nome" placeholder="Digite seu nome." required>
 
