--- a/contato.html
+++ b/contato.html
@@ -34,9 +34,9 @@
             <textarea id="mensagem" name="mensagem" rows="5" placeholder="Escreva sua sugestão"></textarea>
             
             <label>Filial:</label>
-    <input type="radio" id="pg" name="Filial" value="Ponta Grossa">
+    <input type="radio" id="pg" name="filial" value="Ponta Grossa">
     <label for="pg">Ponta Grossa</label>
-    <input type="radio" id="ctb" name="Filial" value="Curitiba">
+    <input type="radio" id="ctb" name="filial" value="Curitiba">
     <label for="ctb">Curitiba</label>
 
 
