Add theme toggle feature in header

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             <a href="contato.html">Contato</a>
             <a href="planilha.html">Planilha</a>
         </nav>
+        <div id="tema-toggle" class="tema-toggle">
+  <div class="bolinha"></div>
+</div>
+
     </header>
 
     <!-- Conteúdo principal -->
